# cppHackathon

./: 2DShootingGame  2Dshooting.pu  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
src/: Game.cpp  Game.h  Math.cpp  Math.h  main.cpp
src/Actors/: Actor.cpp  Actor.h  EndMessage.cpp  EndMessage.h  Enemy.cpp  Enemy.h  GuardWall.cpp  GuardWall.h  Player.cpp  Player.h  PlayerObj.cpp  PlayerObj.h  Ship.cpp  Ship.h  StartMessage.cpp  StartMessage.h  WallHpBar.cpp  WallHpBar.h
src/Components/: AnimSpriteCompoment.cpp  AnimSpriteComponent.h  BarSpriteComponent.cpp  BarSpriteComponent.h  CircleCollderComponent.cpp  CircleColliderComponent.h  ColliderComponent.cpp  ColliderComponent.h  Component.cpp  Component.h  SpriteComponent.cpp  SpriteComponent.h
src/Scenes/: EndScene.cpp  EndScene.h  GameScene.cpp  GameScene.h  ReadyScene.cpp  ReadyScene.h  Scene.cpp  Scene.h
